# ci-fix-test-repo

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/ci_fix_test_repo/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
